# propertis

./: CMakeLists.txt  LICENSE  README.md  props.prp
include/utils/: properties.h
src/: main.cc  properties.cc
